# cAPI

./: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  INTERLINK_CAPI_CONSOLIDATION.md  README.md  RUNTIME_PATCH.md  mcp-servers.json  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: ci.yml  contracts.yml  deploy.yml
contracts/: README.md  X402Escrow.sol
contracts/graphql/: operation-registry.json  schema.graphql
contracts/scripts/: build-operation-registry.py  compatibility-check.py  emit-schemas.py
docs/: ADR-004-EINSTEIN-PRIORITIZED-SCHEDULER.md  ADR-005-X402-ESCROW.md
docs/canonical/: capability-status-manifest.json
docs/outly/: OUTLY-OPEN-QUESTIONS.md  OUTLY-SHADOW-MODE-READINESS-AUDIT.md
gradle/wrapper/: gradle-wrapper.properties
interlink/: settings.gradle.kts
interlink-capifull/: MCPAPI_DEPLOYMENT_PRODUCTION_PACKAGE.md  MCPAPI_IMPLEMENTATION_GUIDE.md  MCPAPI_OPERATIONS_DEPLOYMENT.md  MCPAPI_PROJECT_MANIFEST.md  MCPAPI_QUICK_REFERENCE.md  MCPAPI_V2_DELIVERY_SUMMARY.md  WEBMCP_MCPAPI_VEKLOM_INTEGRATION_STRATEGY.md  mcpapi-enhanced-runtime.ts  mcpapi-governance-layer.ts  mcpapi-runtime.ts  mcpapi-safety-layer.ts  mcpapi-veklom-integration.test.ts  mcpapi-veklom-integration.ts
interlink-rs/: Dockerfile  README.md
interlink-rs/interlink-runtime/: Cargo.toml
interlink-rs/interlink-runtime/src/: governance.rs  intelligence.rs  ledger.rs  lib.rs  main.rs  router.rs  safety.rs  webmcp.rs
interlink/app/: build.gradle.kts
interlink/interlink-rs/: Cargo.toml  (+2 more)
public/: protocol.json
(+139 files in other folders)
